Modify max-width and height, to prevent image distortion

--- a/style.css
+++ b/style.css
@@ -74,14 +74,13 @@ main{
 	padding: 3px 3px 3px 6px;
 	display: flex;
 	flex: 1 1 auto;
-	width: auto;
-	height: 200px;
 
 	border: solid 4px green;
 	border-radius: 20px;
 }
 img {
-	width: auto;
+	max-width: 300px;
+	height: auto;
 	display: flex;
 	flex: 1 1 auto;
 	border-radius: 20px;
